@@ -1,13 +1,13 @@
-/*
+/**
  * Licensed to the Apache Software Foundation (ASF) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
  * The ASF licenses this file to You under the Apache License, Version 2.0
  * (the "License"); you may not use this file except in compliance with
  * the License.  You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
+ * <p>
+ * http://www.apache.org/licenses/LICENSE-2.0
+ * <p>
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -16,7 +16,7 @@
  */
 package org.apache.tika.config;
 
-import org.junit.Test;
+import static org.junit.Assert.assertEquals;
 
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
@@ -25,11 +25,10 @@ import java.math.BigInteger;
 import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 
-import static org.junit.Assert.*;
+import org.junit.Test;
+
 
 public class ParamTest {
 
@@ -40,20 +39,12 @@ public class ParamTest {
         list.add("quick");
         list.add("brown");
         list.add("fox");
-        Object objects [] =  {
-                list,
-                Integer.MAX_VALUE,
-                2.5f,
-                4000.57576,
-                true,
-                false,
-                Long.MAX_VALUE,
-                "Hello this is a boring string",
-                new URL("http://apache.org"),
-                new URI("tika://org.apache.tika.ner.parser?impl=xyz"),
-                new BigInteger(Long.MAX_VALUE + "").add(new BigInteger(Long.MAX_VALUE + "")),
-                new File("."),
-        };
+        Object[] objects =
+                new Object[]{list, Integer.MAX_VALUE, 2.5f, 4000.57576, true, false, Long.MAX_VALUE,
+                        "Hello this is a boring string", new URL("http://apache.org"),
+                        new URI("tika://org.apache.tika.ner.parser?impl=xyz"),
+                        new BigInteger(Long.MAX_VALUE + "").add(
+                                new BigInteger(Long.MAX_VALUE + "")), new File("."),};
 
         for (Object object : objects) {
             String name = "name" + System.currentTimeMillis();
